--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -1,11 +1,10 @@
-<input name="classid" type="hidden" value="{{class._id}}"/>
+<input name="classid" type="hidden" value="{{class._id}}" />
 <input type="hidden" name="referrer" value="{{referrer}}" />
 
 <div class="container-fluid ajaxcontent">
 
     <div class="row">
-        <a class="d-block mb-1"
-            href="/administration/classes/{{@root.class/_id}}/edit"
+        <a class="d-block mb-1" href="/administration/classes/{{@root.class/_id}}/edit"
             title="Klasse '{{@root.class.name}}' bearbeiten.">
             <i class="fa fa-pencil"></i> Klasse umbenennen
         </a>
@@ -15,15 +14,16 @@
         <div style="width: 100%" class="form-group">
             <label>Lehrer {{#userHasPermission 'ADMIN_VIEW'}}{{else}}*{{/userHasPermission}}</label>
 
-            <select name="teacherIds[]" multiple data-placeholder="Lehrer auswählen" {{#userHasPermission 'ADMIN_VIEW'}}{{else}}required{{/userHasPermission}}>
+            <select name="teacherIds[]" multiple data-placeholder="Lehrer auswählen"
+                {{#userHasPermission 'ADMIN_VIEW'}}{{else}}required{{/userHasPermission}}>
                 {{#each teachers}}
-                    <option value="{{this._id}}" {{#if this.selected}}selected{{/if}} {{#if this.disabled}}disabled{{/if}}>
-                        {{#if this.displayName}}
-                            {{this.displayName}}
-                        {{else}}
-                            {{this.firstName}} {{this.lastName}}
-                        {{/if}}
-                    </option>
+                <option value="{{this._id}}" {{#if this.selected}}selected{{/if}} {{#if this.disabled}}disabled{{/if}}>
+                    {{#if this.displayName}}
+                    {{this.displayName}}
+                    {{else}}
+                    {{this.firstName}} {{this.lastName}}
+                    {{/if}}
+                </option>
                 {{/each}}
             </select>
         </div>
@@ -32,16 +32,18 @@
     <div class="row">
         <div style="width: 100%" class="form-group">
             <label>Schüler</label>
-            <button type="button" class="btn-link pull-right btn-import-class">Schüler aus Vorjahresklasse hinzufügen</button>
+            <button type="button" class="btn-link pull-right btn-import-class">Schüler aus Vorjahresklasse
+                hinzufügen</button>
             <select name="userIds" multiple data-placeholder="Schüler auswählen">
                 {{#each students}}
-                    <option value="{{this._id}}" {{#if this.selected}}selected{{/if}} class="red" data-first-name="{{this.firstName}}" data-last-name="{{this.lastName}}">
-                        {{#if this.displayName}}
-                            {{this.displayName}}
-                        {{else}}
-                            {{this.firstName}} {{this.lastName}}
-                        {{/if}}
-                    </option>
+                <option value="{{this._id}}" {{#if this.selected}}selected{{/if}} class="red"
+                    data-first-name="{{this.firstName}}" data-last-name="{{this.lastName}}">
+                    {{#if this.displayName}}
+                    {{this.displayName}}
+                    {{else}}
+                    {{this.firstName}} {{this.lastName}}
+                    {{/if}}
+                </option>
                 {{/each}}
             </select>
         </div>
@@ -52,78 +54,80 @@
         <button type="submit" class="btn btn-primary">Änderungen speichern</button>
     </div>
 
-    <hr class="my-2"/>
+    <hr class="my-2" />
 
     <div class="mb-3">
-        <h4>Deine Schüler sind noch nicht in der {{theme.short_title}}?</h4>
+        <h2 class="h4">Deine Schüler sind noch nicht in der {{theme.short_title}}?</h2>
         <p>
-            Lade die Eltern per Link ein, ihre Kinder in deiner Klasse zu registrieren und die elektronische Einwilligungserklärung abzugeben.
+            Lade die Eltern per Link ein, ihre Kinder in deiner Klasse zu registrieren und die elektronische
+            Einwilligungserklärung abzugeben.
         </p>
     </div>
 
     <div class="mb-3">
-        <h4>
+        <h2 class="h4">
             Einverständniserklärung einholen
-        </h4>
+        </h2>
         {{#if schoolUsesLdap}}
-            <strong>Schüler loggen sich in Anwesenheit eines Erziehungberechtigten ein</strong>
-            
-            <p>Durch Anbindung an ein Landes- oder Schulsystem können sich die Schüler bereits in der {{theme.short_title}} einloggen. Fordere deine Schüler auf, den ersten Login im Beisein eines Erziehungsberechtigten vorzunehmen, damit dieser sein Einverständnis erklären kann und die Registrierung abschließen kann.</p>
+        <strong>Schüler loggen sich in Anwesenheit eines Erziehungberechtigten ein</strong>
+
+        <p>Durch Anbindung an ein Landes- oder Schulsystem können sich die Schüler bereits in der {{theme.short_title}}
+            einloggen. Fordere deine Schüler auf, den ersten Login im Beisein eines Erziehungsberechtigten vorzunehmen,
+            damit dieser sein Einverständnis erklären kann und die Registrierung abschließen kann.</p>
         {{else}}
-            <strong>Lade Eltern und Schüler per Link ein, die Einverständniserklärung abzugeben</strong>
-            <p>
-                Lass deinen Schülern und deren Eltern individuelle Links zum Erklären des Einverständnisses digital oder analog zukommen. Bei Abschluss der Registrierung wird ein Loginpasswort für den Schüler erstellt.
-            </p>
-            <p>Für alle Schüler</strong> ohne vollständige Einverständniserklärung:</p>
-            <p>
-                <button data-class="{{class._id}}" class="btn btn-secondary btn-send-links-emails">
-                    Links an Schüler E-Mail Adressen senden
-                </button>
-                <button data-class="{{class._id}}" class="btn btn-secondary btn-print-links">
-                    Link-Druckbogen erstellen
-                </button>
-            </p>
-            <p>
-                Oder wähle Schüler in der Tabelle aus.
-            </p>
+        <strong>Lade Eltern und Schüler per Link ein, die Einverständniserklärung abzugeben</strong>
+        <p>
+            Lass deinen Schülern und deren Eltern individuelle Links zum Erklären des Einverständnisses digital oder
+            analog zukommen. Bei Abschluss der Registrierung wird ein Loginpasswort für den Schüler erstellt.
+        </p>
+        <p>Für alle Schüler</strong> ohne vollständige Einverständniserklärung:</p>
+        <p>
+            <button data-class="{{class._id}}" class="btn btn-secondary btn-send-links-emails">
+                Links an Schüler E-Mail Adressen senden
+            </button>
+            <button data-class="{{class._id}}" class="btn btn-secondary btn-print-links">
+                Link-Druckbogen erstellen
+            </button>
+        </p>
+        <p>
+            Oder wähle Schüler in der Tabelle aus.
+        </p>
         {{/if}}
     </div>
 
     <div class="mb-3">
-        <h4>Einladungslink</h4>
-        <input id="invitationLink" class="w-100" value="{{invitationLink}}" readonly/>
+        <h2 class="h4">Einladungslink</h2>
+        <input id="invitationLink" class="w-100" value="{{invitationLink}}" readonly />
 
         <div class="clearfix">
-            <button type="button" class="pull-left btn-link copy" data-copy-selector="#invitationLink">Link kopieren</button>
+            <button type="button" class="pull-left btn-link copy" data-copy-selector="#invitationLink">Link
+                kopieren</button>
             <button type="button" class="pull-right btn-link" id="printInvitation">Link mit QR-Code Drucken</button>
         </div>
     </div>
 
     <div>
-        <h4 class="mt-1">Bitte beachte:</h4>
+        <h2 class="mt-1 h4">Bitte beachte:</h2>
         <div class="row">
             <div class="col-sm-12">
                 <div id="accordion" role="tablist" aria-multiselectable="true">
                     {{#each notes}}
-                        <div class="card">
-                            <a data-toggle="collapse" data-parent="#accordion"
-                                href="#collapse-{{@index}}"
-                                {{#ifeq @index 0}}aria-expanded="true"{{/ifeq}}
-                                aria-controls="collapse-{{@index}}">
-                                <div class="card-header" role="tab" id="heading-{{@index}}">
-                                    <h5 class="mb-0">
-                                        {{this.title}}
-                                    </h5>
-                                </div>
-                            </a>
-                            <div id="collapse-{{@index}}" class="collapse"
-                                    role="tabpanel" aria-labelledby="heading-{{@index}}"
-                                    {{#ifeq @index 0}}aria-expanded="true"{{/ifeq}}>
-                                <div class="card-block">
-                                    {{{this.content}}}
-                                </div>
+                    <div class="card">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse-{{@index}}"
+                            {{#ifeq @index 0}}aria-expanded="true" {{/ifeq}} aria-controls="collapse-{{@index}}">
+                            <div class="card-header" role="tab" id="heading-{{@index}}">
+                                <h3 class="mb-0 h5">
+                                    {{this.title}}
+                                </h3>
+                            </div>
+                        </a>
+                        <div id="collapse-{{@index}}" class="collapse" role="tabpanel"
+                            aria-labelledby="heading-{{@index}}" {{#ifeq @index 0}}aria-expanded="true" {{/ifeq}}>
+                            <div class="card-block">
+                                {{{this.content}}}
                             </div>
                         </div>
+                    </div>
                     {{/each}}
                 </div>
             </div>
@@ -132,31 +136,31 @@
 </div>
 
 {{#embed "lib/components/modal-form" class="import-modal"}}
-    {{#content "fields"}}
-    
-        <div class="form-group">
-            <label for="filter_schoolyear">Nach Schuljahr filtern</label>
-            <select id="filter_schoolyear" name="classes" data-placeholder="Nach Schuljahr filtern">
-                <option value="" selected>Alle</option>
-                {{#each schoolyears}}
-                    <option value="{{this._id}}">
-                        {{this.name}}
-                    </option>
-                {{/each}}
-            </select>
-            <p>Achtung! Wenn du das Schuljahr wechselst wird deine Auswahl an Vorjahres-Klassen zurückgesetzt.</p>
-        </div>
-        <div class="form-group">
-            <label for="student_from_class_import">Schüler aus Vorjahres-Klasse hinzufügen</label>
-            <select id="student_from_class_import" name="classes" multiple data-placeholder="Alte Klasse(n) auswählen">
-                {{#each classes}}
-                    <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
-                        {{this.displayName}}
-                    </option>
-                {{/each}}
-            </select>
-        </div>
-    {{/content}}
+{{#content "fields"}}
+
+<div class="form-group">
+    <label for="filter_schoolyear">Nach Schuljahr filtern</label>
+    <select id="filter_schoolyear" name="classes" data-placeholder="Nach Schuljahr filtern">
+        <option value="" selected>Alle</option>
+        {{#each schoolyears}}
+        <option value="{{this._id}}">
+            {{this.name}}
+        </option>
+        {{/each}}
+    </select>
+    <p>Achtung! Wenn du das Schuljahr wechselst wird deine Auswahl an Vorjahres-Klassen zurückgesetzt.</p>
+</div>
+<div class="form-group">
+    <label for="student_from_class_import">Schüler aus Vorjahres-Klasse hinzufügen</label>
+    <select id="student_from_class_import" name="classes" multiple data-placeholder="Alte Klasse(n) auswählen">
+        {{#each classes}}
+        <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
+            {{this.displayName}}
+        </option>
+        {{/each}}
+    </select>
+</div>
+{{/content}}
 {{/embed}}
 
 {{#embed "lib/components/modal-cancel" class="cancel-modal"}}{{/embed}}
