--- a/views/administration/dashboard.hbs
+++ b/views/administration/dashboard.hbs
@@ -19,7 +19,7 @@
                             <div class="card h-100 teacher-option" onclick="location.href='/administration/students'">
                                 <div class="card-block homework">
                                     <div class="card-text">
-                                        <h4><i class="fa fa-odnoklassniki"></i> Schüler verwalten</h4>
+                                        <h2 class="h4"><i class="fa fa-odnoklassniki"></i> Schüler verwalten</h2>
                                     </div>
                                 </div>
                             </div>
@@ -29,7 +29,7 @@
                             <div class="card h-100 teacher-option" onclick="location.href='/administration/teachers/'">
                                 <div class="card-block homework">
                                     <div class="card-text">
-                                        <h4><i class="fa fa-user"></i> Lehrer verwalten</h4>
+                                        <h2 class="h4"><i class="fa fa-user"></i> Lehrer verwalten</h2>
                                     </div>
                                 </div>
                             </div>
@@ -40,7 +40,7 @@
                             <div class="card h-100 teacher-option" onclick="location.href='/administration/courses/'">
                                 <div class="card-block homework">
                                     <div class="card-text">
-                                        <h4><i class="fa fa-graduation-cap"></i> Kurse verwalten</h4>
+                                        <h2 class="h4"><i class="fa fa-graduation-cap"></i> Kurse verwalten</h2>
                                     </div>
                                 </div>
                             </div>
@@ -50,7 +50,7 @@
                             <div class="card h-100 teacher-option" onclick="location.href='/administration/classes/'">
                                 <div class="card-block homework">
                                     <div class="card-text">
-                                        <h4><i class="fa fa-users"></i> Klassen verwalten</h4>
+                                        <h2 class="h4"><i class="fa fa-users"></i> Klassen verwalten</h2>
                                     </div>
                                 </div>
                             </div>
@@ -60,7 +60,7 @@
                             <div class="card h-100 teacher-option" onclick="location.href='/administration/school/'">
                                 <div class="card-block homework">
                                     <div class="card-text">
-                                        <h4><i class="fa fa-building"></i> Schule verwalten</h4>
+                                        <h2 class="h4"><i class="fa fa-building"></i> Schule verwalten</h2>
                                     </div>
                                 </div>
                             </div>
