--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -15,16 +15,16 @@
                 <div class="col-sm-12 no-padding">
                     <!-- Admin View -->
                     {{#userHasPermission 'ADMIN_VIEW'}}
-                    <h4>Schule</h4>
+                    <h2 class="h4">Schule</h2>
 
                     <form action="/administration/schools/{{../currentSchool}}" method="post" class="edit-form-school">
                         <input type="hidden" name="_method" value="patch" />
 
                         <div class="form-group">
                             <label>Name der Schule</label>
-                            <input value="{{../school.name}}" type="text" class="form-control" name="name" placeholder="Einhorn Gymnasium"
-                                {{#if ../schoolUsesLdap}} readonly{{/if}} {{#if ../isExpertSchool}} readonly{{/if}}
-                                required />
+                            <input value="{{../school.name}}" type="text" class="form-control" name="name"
+                                placeholder="Einhorn Gymnasium" {{#if ../schoolUsesLdap}} readonly{{/if}}
+                                {{#if ../isExpertSchool}} readonly{{/if}} required />
                         </div>
 
                         <div class="form-group">
@@ -36,10 +36,11 @@
                             <img id="preview-logo" src="">
                             <canvas id="logo-canvas" width="35" height="35" class="hidden"></canvas>
                         </div>
-                        
+
                         <div class="form-group">
                             <label>
-                                <input type="checkbox" name="rocketchat" value="true" {{#inArray "rocketChat" ../school.features}}checked{{/inArray}}>
+                                <input type="checkbox" name="rocketchat" value="true"
+                                    {{#inArray "rocketChat" ../school.features}}checked{{/inArray}}>
                                 Freischaltung des Messengers für einzelne Bereiche zulassen
                             </label>
                         </div>
@@ -49,8 +50,10 @@
                             <label>Cloud-Storage Anbieter</label>
                             <select name="fileStorageType" type="text">
                                 {{#each ../provider}}
-                                <option value="{{this.value}}" {{#if this.selected}} selected{{/if}}>{{this.label}} </option>
-                                    {{/each}} </select> </div> {{/if}} <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
+                                <option value="{{this.value}}" {{#if this.selected}} selected{{/if}}>{{this.label}}
+                                </option>
+                                {{/each}} </select> </div> {{/if}} <button type="submit"
+                            class="btn btn-primary btn-submit">Speichern</button>
 
                     </form>
 
@@ -70,15 +73,18 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 no-padding">
-                    <form action="/administration/schools/{{currentSchool}}/bucket" method="post" class="edit-form-school">
+                    <form action="/administration/schools/{{currentSchool}}/bucket" method="post"
+                        class="edit-form-school">
 
                         <div class="form-group">
                             <label>Cloud-Storage Anbieter</label>
                             <select name="fileStorageType" type="text">
                                 <option disabled="disabled" selected="selected">Anbieter auswählen</option>
                                 {{#each provider}}
-                                <option value="{{this.value}}" {{#if this.selected}} selected{{/if}}>{{this.label}} </option>
-                                    {{/each}} </select> </div> <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
+                                <option value="{{this.value}}" {{#if this.selected}} selected{{/if}}>{{this.label}}
+                                </option>
+                                {{/each}}
+                            </select> </div> <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
 
                     </form>
                 </div>
@@ -87,7 +93,7 @@
     </section>
     {{/unless}}
     <section class="section-school section-default">
-        <h4>Authentifizierung</h4>
+        <h2 class="h4">Authentifizierung</h2>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 no-padding">
@@ -131,7 +137,7 @@
     </section>
 
     <section class="section-school section-default">
-        <h4>RSS-Feeds</h4>
+        <h2 class="h4">RSS-Feeds</h2>
         <div class="container-fluid">
             <div class="row">
                 {{#if hasRSS}}
