--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -1,111 +1,112 @@
 {{#extend "administration/administration"}}
-    {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/lib/filter/filter.css"/>
-        <link rel="stylesheet" href="/styles/administration/users.css"/>
-    {{/content}}
-    {{#content "page"}}
-        <div class="route-administration">
-            <section class="section-teachers section-default">
-                <div><feathers-filter id="filter"
-                                      filter='{{filterSettings}}'
-                                      add-label='Filter hinzufügen'
-                                      apply-label='Übernehmen'
-                                      cancle-label='Abbrechen'
-                                      handle-url='true'
-                                      save-state='true'
-                /></div>
-                <div class="container-fluid ajaxcontent">
-                    <div class="row">
-                        <div class="col-sm-12 no-padding">
-                            {{> "lib/components/table" head=head body=body}}
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12 no-padding">
-                            <center>
-                                <i class="fa fa-times consent-status"></i>
-                                Keine Einverständniserklärung vorhanden &emsp;
-                                <i class="fa fa-check consent-status"></i>
-                                Alle Zustimmungen vorhanden
-                            </center>
-                        </div>
-                    </div>
-                    <div class="row">
-                        {{> "lib/components/pagination" settings=pagination }}
-                    </div>
-
-                    <div class="row mb-2">
-                        <div class="col-sm-12 no-padding">
-                            <h4>
-                                Einverständniserklärung einholen
-                            </h4>
-                            {{#if schoolUsesLdap}}
-                                <strong>Passwörter und Einverständniserklärung</strong>
-
-                                <p>
-                                    Durch Anbindung an ein Landes- oder Schulsystem haben die Lehrer bereits ein Passwort und können sich in der {{theme.short_title}} einloggen. 
-                                    Beim ersten Login werden sie aufgefordert, ihr Einverständnis zur Nutzung der {{theme.short_title}} zu erklären .
-                                </p>
-                            {{else}}
-                                <strong>Lade Lehrer per Link ein, die Einverständniserklärung abzugeben</strong>
-                                <p>
-                                    Lass deinen Lehrern individuelle Links zum Erklären des Einverständnisses digital oder Lass den Lehrern individuelle Links zum Abschluss der Registrierung per Mail oder analog per QR-Code-Druckbogen zukommen. 
-                                    So können sie sich ein Passwort erstellen und ihr Einverständnis zur Nutzung der {{theme.short_title}} erklären.analog zukommen. 
-                                </p>
-                                <p>Für alle Lehrer ohne vollständige Einverständniserklärung:</p>
-                                <p>
-                                    <button data-role="teacher" class="btn btn-secondary btn-send-links-emails">
-                                        Links an Lehrer E-Mail Adressen senden
-                                    </button>
-                                    <button data-role="teacher" class="btn btn-secondary btn-print-links">
-                                        Link-Druckbogen erstellen
-                                    </button>
-                                </p>
-                                <p>
-                                    Oder wähle Lehrer in der Tabelle aus.
-                                </p>
-                            {{/if}}
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-sm-12 no-padding">
-                            {{#if schoolUsesLdap}}
-                                {{> "lib/ldap-info"}}
-                            {{else}}
-                                <button type="submit" class="btn btn-primary btn-add-modal">
-                                    Lehrer hinzufügen
-                                </button>
-                                {{#inArray "Administrator" roleNames}}
-                                    <button class="btn btn-secondary btn-import teacher">
-                                        Lehrer importieren
-                                    </button>
-                                {{/inArray}}
-                            {{/if}}
-                        </div>
-                    </div>
-                </div>
-
-
-                {{#embed "lib/components/modal-form" action="/administration/teachers/" method="post" class="add-modal"}}
-                    {{#content "fields"}}
-                        {{> "administration/forms/form-teachers"}}
-                    {{/content}}
-                {{/embed}}
-
-                {{#embed "lib/components/modal-form" class="invitation-modal"}}
-                    {{#content "fields"}}
-                        {{> "administration/forms/form-invitation-teacher"}}
-                    {{/content}}
-                {{/embed}}
-
-                {{#embed "lib/components/modal-form" action="/administration/teachers/import/" method="post" class="import-modal" enctype="multipart/form-data"}}
-                    {{#content "fields"}}
-                        {{> "administration/forms/form-import" roles="teacher"}}
-                    {{/content}}
-                {{/embed}}
-
-            </section>
+{{#content "styles" mode="append"}}
+<link rel="stylesheet" href="/styles/lib/filter/filter.css" />
+<link rel="stylesheet" href="/styles/administration/users.css" />
+{{/content}}
+{{#content "page"}}
+<div class="route-administration">
+    <section class="section-teachers section-default">
+        <div>
+            <feathers-filter id="filter" filter='{{filterSettings}}' add-label='Filter hinzufügen'
+                apply-label='Übernehmen' cancle-label='Abbrechen' handle-url='true' save-state='true' />
         </div>
-    {{/content}}
+        <div class="container-fluid ajaxcontent">
+            <div class="row">
+                <div class="col-sm-12 no-padding">
+                    {{> "lib/components/table" head=head body=body}}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 no-padding">
+                    <center>
+                        <i class="fa fa-times consent-status"></i>
+                        Keine Einverständniserklärung vorhanden &emsp;
+                        <i class="fa fa-check consent-status"></i>
+                        Alle Zustimmungen vorhanden
+                    </center>
+                </div>
+            </div>
+            <div class="row">
+                {{> "lib/components/pagination" settings=pagination }}
+            </div>
+
+            <div class="row mb-2">
+                <div class="col-sm-12 no-padding">
+                    <h2 class="h4">
+                        Einverständniserklärung einholen
+                    </h2>
+                    {{#if schoolUsesLdap}}
+                    <strong>Passwörter und Einverständniserklärung</strong>
+
+                    <p>
+                        Durch Anbindung an ein Landes- oder Schulsystem haben die Lehrer bereits ein Passwort und können
+                        sich in der {{theme.short_title}} einloggen.
+                        Beim ersten Login werden sie aufgefordert, ihr Einverständnis zur Nutzung der
+                        {{theme.short_title}} zu erklären .
+                    </p>
+                    {{else}}
+                    <strong>Lade Lehrer per Link ein, die Einverständniserklärung abzugeben</strong>
+                    <p>
+                        Lass deinen Lehrern individuelle Links zum Erklären des Einverständnisses digital oder Lass den
+                        Lehrern individuelle Links zum Abschluss der Registrierung per Mail oder analog per
+                        QR-Code-Druckbogen zukommen.
+                        So können sie sich ein Passwort erstellen und ihr Einverständnis zur Nutzung der
+                        {{theme.short_title}} erklären.analog zukommen.
+                    </p>
+                    <p>Für alle Lehrer ohne vollständige Einverständniserklärung:</p>
+                    <p>
+                        <button data-role="teacher" class="btn btn-secondary btn-send-links-emails">
+                            Links an Lehrer E-Mail Adressen senden
+                        </button>
+                        <button data-role="teacher" class="btn btn-secondary btn-print-links">
+                            Link-Druckbogen erstellen
+                        </button>
+                    </p>
+                    <p>
+                        Oder wähle Lehrer in der Tabelle aus.
+                    </p>
+                    {{/if}}
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12 no-padding">
+                    {{#if schoolUsesLdap}}
+                    {{> "lib/ldap-info"}}
+                    {{else}}
+                    <button type="submit" class="btn btn-primary btn-add-modal">
+                        Lehrer hinzufügen
+                    </button>
+                    {{#inArray "Administrator" roleNames}}
+                    <button class="btn btn-secondary btn-import teacher">
+                        Lehrer importieren
+                    </button>
+                    {{/inArray}}
+                    {{/if}}
+                </div>
+            </div>
+        </div>
+
+
+        {{#embed "lib/components/modal-form" action="/administration/teachers/" method="post" class="add-modal"}}
+        {{#content "fields"}}
+        {{> "administration/forms/form-teachers"}}
+        {{/content}}
+        {{/embed}}
+
+        {{#embed "lib/components/modal-form" class="invitation-modal"}}
+        {{#content "fields"}}
+        {{> "administration/forms/form-invitation-teacher"}}
+        {{/content}}
+        {{/embed}}
+
+        {{#embed "lib/components/modal-form" action="/administration/teachers/import/" method="post" class="import-modal" enctype="multipart/form-data"}}
+        {{#content "fields"}}
+        {{> "administration/forms/form-import" roles="teacher"}}
+        {{/content}}
+        {{/embed}}
+
+    </section>
+</div>
+{{/content}}
 {{/extend}}
